==> iabdalkader/stm32f4xx/FatFS/src/diskio.c <==
#include <stdbool.h>
#include <stm32f4xx.h>
#include <stm32f4xx_rcc.h>
#include <stm32f4xx_spi.h>
#include <stm32f4xx_gpio.h>
#include "ffconf.h"
#include "diskio.h"
    #define FALSE false
    #define TRUE true
#define STM32_SD_DISK_IOCTRL_FORCE      0
#define CARD_SUPPLY_SWITCHABLE   0
#define SOCKET_WP_CONNECTED      0 /* write-protect socket-switch */
#define SOCKET_CP_CONNECTED      1 /* card-present socket-switch */
#define DMA_Channel_SPIx_RX    DMA1_Channel4
#define DMA_Channel_SPIx_TX    DMA1_Channel5
#define DMA_FLAG_SPIx_TC_RX    DMA1_FLAG_TC4
#define DMA_FLAG_SPIx_TC_TX    DMA1_FLAG_TC5
#define GPIO_SPI_AF         GPIO_AF_SPI2
#define GPIO_PIN_CP         GPIO_Pin_0
#define GPIO_PIN_CS         GPIO_Pin_1
#define GPIO_PIN_SCLK       GPIO_Pin_10
#define GPIO_PIN_MISO       GPIO_Pin_2
#define GPIO_PIN_MOSI       GPIO_Pin_3
#define GPIO_SOURCE_MISO    GPIO_PinSource2
#define GPIO_SOURCE_MOSI    GPIO_PinSource3
#define GPIO_SOURCE_SCLK    GPIO_PinSource10
#define GPIO_PORT_CP        GPIOC
#define GPIO_PORT_CS        GPIOC
#define GPIO_PORT_SCLK      GPIOB
#define GPIO_PORT_MISO      GPIOC
#define GPIO_PORT_MOSI      GPIOC
#define GPIO_CLK_CP         RCC_AHB1Periph_GPIOC
#define GPIO_CLK_CS         RCC_AHB1Periph_GPIOC
#define GPIO_CLK_SCLK       RCC_AHB1Periph_GPIOB
#define GPIO_CLK_MISO       RCC_AHB1Periph_GPIOC
#define GPIO_CLK_MOSI       RCC_AHB1Periph_GPIOC
#define SPIx                SPI2
#define SPIx_CLK            RCC_APB1Periph_SPI2

static
void power_on (void)
{
	SPI_InitTypeDef  SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;

	/* Enable SPI clock */
	SPIx_CLK_CMD(SPIx_CLK, ENABLE);

    /* Enable GPIO clocks */
    GPIO_CLK_CMD(  GPIO_CLK_CS
                 | GPIO_CLK_SCLK 
                 | GPIO_CLK_MISO 
                 | GPIO_CLK_MOSI, ENABLE);

    powered =1;
	card_power(1);
	socket_cp_init();
	socket_wp_init();

	for (Timer1 = 25; Timer1; );	/* Wait for 250ms */

	/* Configure I/O for Chip select */
	GPIO_InitStructure.GPIO_Pin   = GPIO_PIN_CS;
	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_OUT;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIO_PORT_CS, &GPIO_InitStructure);

	/* De-select the Card: Chip Select high */
	DESELECT();

    /* Connect SPI pins to AF */  
    GPIO_PinAFConfig(GPIO_PORT_SCLK, GPIO_SOURCE_SCLK, GPIO_SPI_AF);
    GPIO_PinAFConfig(GPIO_PORT_MISO, GPIO_SOURCE_MISO, GPIO_SPI_AF);    
    GPIO_PinAFConfig(GPIO_PORT_MOSI, GPIO_SOURCE_MOSI, GPIO_SPI_AF);

    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

   /* SPI  MISO pin configuration */
    GPIO_InitStructure.GPIO_Pin =  GPIO_PIN_MISO;
    GPIO_Init(GPIO_PORT_MISO, &GPIO_InitStructure);  

    /* SPI  MOSI pin configuration */
    GPIO_InitStructure.GPIO_Pin =  GPIO_PIN_MOSI;
    GPIO_Init(GPIO_PORT_MOSI, &GPIO_InitStructure);

    /* SPI SCK pin configuration */
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;
    GPIO_InitStructure.GPIO_Pin = GPIO_PIN_SCLK;
    GPIO_Init(GPIO_PORT_SCLK, &GPIO_InitStructure);
  
 
	/* SPI configuration */
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256; // 72000kHz/256=281kHz < 400kHz
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;

	SPI_Init(SPIx, &SPI_InitStructure);
	SPI_CalculateCRC(SPIx, DISABLE);
	SPI_Cmd(SPIx, ENABLE);

	/* drain SPI */
	while (SPI_I2S_GetFlagStatus(SPIx, SPI_I2S_FLAG_TXE) == RESET) { ; }

    /* dummy read */
	SPI_I2S_ReceiveData(SPIx);

#ifdef STM32_SD_USE_DMA
	/* enable DMA clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);
#endif
}

static
void power_off (void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	if (!(Stat & STA_NOINIT)) {
		SELECT();
		wait_ready();
		release_spi();
	}

	SPI_I2S_DeInit(SPIx);
	SPI_Cmd(SPIx, DISABLE);
    SPIx_CLK_CMD(SPIx_CLK, DISABLE);

	/* All SPI-Pins to input with weak internal pull-downs */
	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IN;
	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;

    /* SPI SCK pin configuration */
    GPIO_InitStructure.GPIO_Pin = GPIO_PIN_SCLK;
    GPIO_Init(GPIO_PORT_SCLK, &GPIO_InitStructure);
  
    /* SPI  MISO pin configuration */
    GPIO_InitStructure.GPIO_Pin =  GPIO_PIN_MISO;
    GPIO_Init(GPIO_PORT_MISO, &GPIO_InitStructure);  

    /* SPI  MOSI pin configuration */
    GPIO_InitStructure.GPIO_Pin =  GPIO_PIN_MOSI;
    GPIO_Init(GPIO_PORT_MOSI, &GPIO_InitStructure);

	card_power(0);

	Stat |= STA_NOINIT;		/* Set STA_NOINIT */
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];

	if (drv) return STA_NOINIT;			/* Supports only single drive */
	if (Stat & STA_NODISK) return Stat;	/* No card in the socket */

	power_on();							/* Force socket power on and initialize interface */
	interface_speed(INTERFACE_SLOW);
	for (n = 10; n; n--) rcvr_spi();	/* 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Enter Idle state */
		Timer1 = 100;						/* Initialization timeout of 1000 milliseconds */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDHC */
			for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();		/* Get trailing return value of R7 response */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* The card can work at VDD range of 2.7-3.6V */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30));	/* Wait for leaving idle state (ACMD41 with HCS bit) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;
				}
			}
		} else {							/* SDSC or MMC */
			if (send_cmd(ACMD41, 0) <= 1) 	{
				ty = CT_SD1; cmd = ACMD41;	/* SDSC */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMC */
			}
			while (Timer1 && send_cmd(cmd, 0));			/* Wait for leaving idle state */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set R/W block length to 512 */
				ty = 0;
		}
	}
	CardType = ty;
	release_spi();

	if (ty) {			/* Initialization succeeded */
		Stat &= ~STA_NOINIT;		/* Clear STA_NOINIT */
		interface_speed(INTERFACE_FAST);
	} else {			/* Initialization failed */
		power_off();
	}

	return Stat;
}
