==> rickshory/AVRGreenlogger/greenlogger/greenlogger/src/SDcard/diskio.c <==
#include <avr/io.h>
#include <inttypes.h>
#include "../greenlogger.h"
#include "ff.h"
#include "diskio.h"
#include "RTC/DS1342.h"
#include "BattMonitor/ADconvert.h"

static 
void power_on (void) 
{ 
//#if (defined SD_PWR_BIT | defined SD_PWR_PORT) 
//   SD_PWR_PORT|=(1<<SD_PWR_BIT);   // Drives PWR pin high
   SD_PWR_PORT &= ~(1<<SD_PWR_BIT);   // Drives PWR pin low, inverted through FET 
   SD_PWR_DD |= (1<<SD_PWR_BIT);          // Turns on PWR pin as output 

//#endif 
	PRR0 &= ~(1<<PRSPI); // assure SPI module power is on
	for (Timer1 = 3; Timer1; );	// Wait for 30ms
	SD_CS_DD |= (1<<SD_CS_BIT);          // Turns on CS pin as output 
	DDR_SPI |= ((1<<DD_MOSI)|(1<<DD_SCK)|(1<<DD_SS)); 
	SPCR = (1<<SPE)|(1<<MSTR); // Initialize SPI port (Mode 0)
	// enable MISO internal pull-up resistor
	DDR_SPI &= ~(1<<SD_MISO_PU_BIT); // force MISO to be in input
	SD_MISO_PU_PORT |= (1<<SD_MISO_PU_BIT); // output high to the port, enables pull-up on the input
}

static 
void power_off (void) 
{
	if (!(PRR0 & (1<<PRSPI))) // is SPI power on (Pwr Save bit clear)?
	{
		if (SPCR & (1<<SPE)) // is SPI enabled?
		{ // shutdown sequence
			SELECT(); // Wait for card ready
			//   CS_LOW();            // Wait for card ready
			wait_ready();
			release_spi();
			//   deselect();
			//   SD_CS_DD |= (1<<SD_CS_BIT);          // Turns on CS pin as output
			// for (Timer1 = 2; Timer1; );	// Wait for 20ms
			// SD_CS_DD |= (1<<SD_CS_BIT);          // Turns on CS pin as output
			// DESELECT(); // this may be redundant, but explicitly deselect the SD card
			SPCR &= ~(1<<SPE); // disable SPI
			
		}
		PRR0 |= (1<<PRSPI); // turn off power to SPI module, stop its clock
	}		
	for (Timer1 = 2; Timer1; );	// Wait for 20ms
    DDR_SPI &= ~((1<<DD_MOSI)|(1<<DD_SCK)); // change SPI output lines MOSI and SCK into inputs
	// pins might source current momentarily
	 // set port bits to 0, disable any internal pull-ups; tri-state the pins
	SPI_PORT &= ~((1<<SPI_MOSI_BIT)|(1<<SPI_SCK_BIT)|(1<<SPI_MISO_BIT)); // MISO was already an input
	
	SD_CS_DD &= ~(1<<SD_CS_BIT); // change SS to an input, momentarily sources current through internal pull-up
	SD_CS_PORT &= ~(1<<SD_CS_BIT); // set port bit to zero, tri-state the input

	SD_PWR_DD |= (1<<SD_PWR_BIT);          // Turns on PWR pin as output 
	SD_PWR_PORT |= (1<<SD_PWR_BIT);   // Drive PWR pin high; this will turn FET off
	SD_PWR_DD &= ~(1<<SD_PWR_BIT);          // change PWR pin to an input
	// internal pull-up momentarily pulls high, along with external pull-up
	SD_PWR_PORT &= ~(1<<SD_PWR_BIT);   // tri-state the pin; external pull-up keeps FET off
	
	Stat |= STA_NOINIT;      // Set STA_NOINIT
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (drv) return STA_NOINIT;			/* Supports only single drive */
	if (Stat & STA_NODISK) return Stat;	/* No card in the socket */

	power_on();							/* Force socket power on */
	FCLK_SLOW();
	for (n = 10; n; n--) rcvr_spi();	/* 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Enter Idle state */
		Timer1 = 100;						/* Initialization timeout of 1000 msec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDHC */
			for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();		/* Get trailing return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* The card can work at vdd range of 2.7-3.6V */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30));	/* Wait for leaving idle state (ACMD41 with HCS bit) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = rcvr_spi();
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* SDv2 */
				}
			}
		} else {							/* SDSC or MMC */
			if (send_cmd(ACMD41, 0) <= 1) 	{
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 */
			}
			while (Timer1 && send_cmd(cmd, 0));			/* Wait for leaving idle state */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set R/W block length to 512 */
				ty = 0;
		}
	}
	CardType = ty;
	release_spi();

	if (ty) {			/* Initialization succeeded */
		Stat &= ~STA_NOINIT;		/* Clear STA_NOINIT */
		FCLK_FAST();
	} else {			/* Initialization failed */
		power_off();
	}

	return Stat;
}
